--- a/foryou/forYou.html
+++ b/foryou/forYou.html
@@ -3,14 +3,14 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<title>¸øÄĞÆ±Æ±×öµÄ³ÌĞòÀ²£¡</title>
+<title>ç»™ç”·ç¥¨ç¥¨åšçš„ç¨‹åºå•¦ï¼</title>
 <style type="text/css">
 body, html {
 	width: 100%;
 	height: 100%;
 	margin: 0;
-	font-family: "Î¢ÈíÑÅºÚ";
-	text-align£ºcenter;
+	font-family: "å¾®è½¯é›…é»‘";
+	text-alignï¼šcenter;
 }
 
 #l-map {
@@ -104,8 +104,8 @@ body, html {
 		<div class=" pop">
 			<textarea id="text" cols="78" rows="27"></textarea>
 			<!-- <input type="button" class="btn "
-				value="½âÎöjson²¢µ¼³ö" id="resolvingtoJSON" />
-			<!--<input type="button" id="export" class="btn " value="µ¼³ö" />  -->
+				value="è§£æjsonå¹¶å¯¼å‡º" id="resolvingtoJSON" />
+			<!--<input type="button" id="export" class="btn " value="å¯¼å‡º" />  -->
 		</div>
 		<div id="result1"></div>
 		<div id="result"></div>
@@ -113,7 +113,7 @@ body, html {
 
 	</div>
 	<div class="point1">
-		<input type="button" name="btn" value="È·¶¨" id="check" class="btn">
+		<input type="button" name="btn" value="ç¡®å®š" id="check" class="btn">
 	</div>
 </body>
 </html>
@@ -147,7 +147,7 @@ body, html {
 	};
 
 
-	// °Ù¶ÈµØÍ¼API¹¦ÄÜ
+	// ç™¾åº¦åœ°å›¾APIåŠŸèƒ½
 	var map = new BMap.Map("l-map");
 	var myGeo = new BMap.Geocoder();
 
@@ -199,7 +199,7 @@ body, html {
 		var sParcelID = obj.sParcelID + ".txt";
 		var dimension_x = obj.sCoordinateX;
 		var dimension_y = obj.sCoordinateY;
-		//×Ô¶¯´Ó°Ù¶ÈµØÍ¼ÖĞ»ñÈ¡¶¨Î»µÄĞÅÏ¢
+		//è‡ªåŠ¨ä»ç™¾åº¦åœ°å›¾ä¸­è·å–å®šä½çš„ä¿¡æ¯
 		geocodeSearch(dimension_x, dimension_y);
 		//document.getElementById("result").innerHTML = sParcelID;
 
@@ -208,8 +208,8 @@ body, html {
 		});
 		saveAs(blob, sParcelID);
 		document.getElementById("text").value = "";
-		//alert("µ¼³öÍê³É");
+		//alert("å¯¼å‡ºå®Œæˆ");
 
-		//È»ºó±£´æµ½ÎÄµµ
+		//ç„¶åä¿å­˜åˆ°æ–‡æ¡£
 	});
 </script>
